Hackerrank - Even numbers

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-src/programs/*
+src/hackerrank/convert/*
+src/hackerrank/currency_formatter/*
+src/hackerrank/dates/*
+src/hackerrank/primitive_fit/*
+src/hackerrank/read_line/*
+src/hackerrank/series/*
+src/hackerrank/static_init/*
+src/hackerrank/tag_content_extractor/*
+
+out/production/untitled104/hackerrank/convert/*
+out/production/untitled104/hackerrank/currency_formatter/*
+out/production/untitled104/hackerrank/dates/*
+out/production/untitled104/hackerrank/primitive_fit/*
+out/production/untitled104/hackerrank/read_line/*
+out/production/untitled104/hackerrank/series/*
+out/production/untitled104/hackerrank/static_init/*
+out/production/untitled104/hackerrank/tag_content_extractor/*
