--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,43 @@
-src/hackathon/*
-out/production/untitled104/hackathon/*
+src/practice/baskets
+src/practice/compare_numbers
+src/practice/factorial_recursion
+src/practice/fibonacci
+src/practice/fibonacci_recursion
+src/practice/input_random_numbers_array
+src/practice/leap_year
+src/practice/lunch_boxes
+src/practice/lunch_boxes_2
+src/practice/lunch_boxes_3
+src/practice/palindrome_number
+src/practice/palindrome_string
+src/practice/pattern
+src/practice/prime_numbers
+src/practice/prime_numbers_between
+src/practice/random_element
+src/practice/rev_array
+src/practice/rev_array_temp
+src/practice/row_col_sum
+src/practice/same_elements
+src/practice/split
+
+out/production/untitled104/practice/baskets
+out/production/untitled104/practice/compare_numbers
+out/production/untitled104/practice/factorial_recursion
+out/production/untitled104/practice/fibonacci
+out/production/untitled104/practice/fibonacci_recursion
+out/production/untitled104/practice/input_random_numbers_array
+out/production/untitled104/practice/leap_year
+out/production/untitled104/practice/lunch_boxes
+out/production/untitled104/practice/lunch_boxes_2
+out/production/untitled104/practice/lunch_boxes_3
+out/production/untitled104/practice/palindrome_number
+out/production/untitled104/practice/palindrome_string
+out/production/untitled104/practice/pattern
+out/production/untitled104/practice/prime_numbers
+out/production/untitled104/practice/prime_numbers_between
+out/production/untitled104/practice/random_element
+out/production/untitled104/practice/rev_array
+out/production/untitled104/practice/rev_array_temp
+out/production/untitled104/practice/row_col_sum
+out/production/untitled104/practice/same_elements
+out/production/untitled104/practice/split
