--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@ src/practice/remove_duplicate_characters
 
 src/com/object_passing
 src/com/inheritance_multiple
-
+src/com/exception_handling
+src/com/files
 
 out/production/untitled104/practice/baskets
 out/production/untitled104/practice/leap_year
@@ -54,3 +55,5 @@ out/production/untitled104/practice/remove_duplicate_characters
 
 out/production/untitled104/com/object_passing
 out/production/untitled104/com/inheritance_multiple
+out/production/untitled104/com/exception_handling
+out/production/untitled104/com/files
