--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,1 @@
-src/practice/lunch_boxes
-src/practice/lunch_boxes_2
-src/practice/lunch_boxes_3
-src/practice/rev_array
-src/practice/row_col_sum
-src/practice/split
-src/practice/multiple_random_numbers
-src/practice/string_to_integer
-
-src/com/object_passing
-src/com/inheritance_multiple
-
-<<<<<<< HEAD
-=======
-src/dsa
-
-out/production/untitled104/practice/baskets
->>>>>>> 8fd8b3a1b10a7882f1de634b3114ca036737f63d
-out/production/untitled104/practice/lunch_boxes
-out/production/untitled104/practice/lunch_boxes_2
-out/production/untitled104/practice/lunch_boxes_3
-out/production/untitled104/practice/rev_array
-out/production/untitled104/practice/row_col_sum
-out/production/untitled104/practice/split
-out/production/untitled104/practice/multiple_random_numbers
-out/production/untitled104/practice/string_to_integer
-
-out/production/untitled104/com/object_passing
-out/production/untitled104/com/inheritance_multiple
-
-out/production/untitled104/dsa
+out/
